# set-cpp

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE.md  Makefile  README.md
src/: ciaonidal.cpp  ciaonidal.h  main.cpp  set.h  test.cpp
test/: CMakeLists.txt  README.md  test.cc  test.cpp
